<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/outline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_title"
        android:icon="@drawable/outline_sort_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="always"
        android:visible="false"
        android:orderInCategory="1" />

    <item
        android:id="@+id/action_pin_to_widget"
        android:title="@string/pin_to_widget"
        android:icon="@drawable/ic_push_pin"
        app:showAsAction="always"
        android:visible="false"
        android:orderInCategory="2" />

    <item
        android:id="@+id/action_share_contextual"
        android:title="@string/action_share"
        android:icon="@drawable/outline_share_24"
        app:showAsAction="always"
        android:visible="false"
        android:orderInCategory="3" />

    <item
        android:id="@+id/action_delete_contextual"
        android:title="@string/action_delete"
        android:icon="@drawable/outline_delete_24"
        app:showAsAction="always"
        android:visible="false"
        android:orderInCategory="4" />

</menu>