<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_trash_info"
        android:title="@string/security_info"
        android:icon="@drawable/outline_info_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_delete_selected"
        android:title="@string/action_delete"
        android:icon="@drawable/outline_delete_24"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>