<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".PasswordSettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_password_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/password_settings_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_password_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <ImageButton
                android:id="@+id/btn_security_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/security_info_button_description"
                app:tint="?attr/noteInfoButtonTint"
                android:src="@drawable/outline_info_24" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password_toggle_selector"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_current_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password_toggle_selector"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password_toggle_selector"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_security_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_security_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_security_question"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_security_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_security_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_security_answer"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_password_button"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_disable_password"
            style="@style/MyOutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_password_button"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>