<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".BackupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_backup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/data_management_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Google Drive"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btn_google_drive_backup"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_to_drive_title"
            app:icon="@drawable/cloud_upload"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_google_drive_restore"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore_from_drive_title"
            app:icon="@drawable/cloud_download" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cihaz Depolaması"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btn_export_to_phone"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_to_phone_title"
            app:icon="@drawable/ic_file_upload"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_import_from_phone"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_from_phone_title"
            app:icon="@drawable/ic_file_download" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOutline"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btn_delete_account"
            style="@style/MyOutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_title"
            app:icon="@drawable/outline_delete_24" />

    </LinearLayout>

</LinearLayout>